test/tests/operators/set/invalid_target.txt
error: left side of `=` must be a field path or metadata reference
 --> tests/operators/set/invalid_target.tql:6:5
  |
6 | set now() = 1
  |     ^^^^^ 
  |
